--- a/web/Css/estiloSetic.css
+++ b/web/Css/estiloSetic.css
@@ -46,7 +46,7 @@ img[title="cabecera"]
     background:url(../imagenes/fondo3.jpg);
     color:#333;
     text-align: justify;
-    Border:solid 2px white;
+    border:solid 2px white;
     border-radius: 7px;
     padding:3% 3% 3% 3%;
     font-size:16px;
@@ -71,7 +71,7 @@ img[title="cabecera"]
 
 #alumnoTable
 {
-    position:initial central;
+    position: initial;
     width: 100%;
 }
 
@@ -150,7 +150,7 @@ input[img=alumno]
 .menu
 {
     background:rgb(153,102,51);
-    COLOR:WHITE;
+    color: white;
     padding-top:0%;
     border:3px solid #630 ;
     margin:5px;
@@ -175,7 +175,7 @@ input[img=alumno]
     padding-left:5%;
     padding-right: 5%;
     color:#333;
-    Border:solid 2px white;
+    border: solid 2px white;
     padding-top:3%;
     padding-bottom:2%;
     font-size:16px;
@@ -190,7 +190,7 @@ input[img=alumno]
     border:solid 2px black; 
     background:url(../imagenes/fondo3.jpg) ;
     margin: 0% 14%;
-    alignment-adjust:center;
+    alignment-adjust: central;
     padding:0.5%;
     height:auto;
     width:70%;	
@@ -199,7 +199,7 @@ input[img=alumno]
     text-align:center;
     font-family:Verdana;
     font-size:26px;
-    text-height:bold;
+    text-height: font-size;
 }
 
 #nombreEncuesta{
