--- a/web/Css/estiloSetic.css
+++ b/web/Css/estiloSetic.css
@@ -7,7 +7,7 @@ and open the template in the editor.
     Created on : 28/11/2013, 10:55:30 PM
     Author     : CARLOS
 */
-
+// Prueba GIT
 body
 {
     background:url(../imagenes/FondoPrincipal.jpg);
