Union proyecto GIT/Dropbox

--- a/web/Css/administrador.css
+++ b/web/Css/administrador.css
@@ -1,5 +1,5 @@
 body {
-    background:url(../imagenes/FondoPrincipal.jpg);
+    background:url(../imagenes/fondoo.jpg);
     background-repeat:no-repeat;
     font-size: 30px;
     background-size:cover;
