--- a/web/Css/typoUsuario.css
+++ b/web/Css/typoUsuario.css
@@ -10,7 +10,7 @@ and open the template in the editor.
 
 body
 {
-    background:url(../imagenes/FondoPrincipal.jpg);
+    background:url(../imagenes/fondoo.jpg);
     text-shadow: 7px 7px 7px white;
     background-repeat:no-repeat;
     font-size: 30px;
